# ato-fab

./: .gitignore  color_match.py  compensation_mappers.pkl  config.yml  default.drl  drl-to-gcode.py  gen_svg.py  platformio.ini  pyproject.toml  remap.py  remap_targets.py  speed_run.py  svg-to-bitmap.py  tool_library.json  utils.py  working_homography.pickle
.github/workflows/: robo-plater-ci.yml
calibrations/: 20241103-120614-Speed-Run.pkl  20241103-Top-Calibration.pkl
camera-calibration/: camera-test.py  generate-calibration-board.py
outputs/: drill-pth.cnc
robo-plater/: README.md  ato.yaml
robo-plater/elec/: brushed-motor-feedback.icircuit
robo-plater/elec/footprints/: footprints.kicad_sym
robo-plater/elec/footprints/footprints.3dshapes/: CONN-SMD_PH2.00-LS-4P.wrl  CONN-TH_4P-P5.00_DB127V-5.0-4P-GN-S.step  CONN-TH_4P-P5.00_DB127V-5.0-4P-GN-S.wrl  HTSSOP-24_L7.8-W4.4-H1.2-LS6.4-P0.65.wrl  QFN-28_L6.0-W6.0-P0.65-BL-EP3.7.wrl  SMA_L4.3-W2.5-H2.1-LS5.0.step  TO-277B-3_L5.4-W4.1-P1.85-LS6.5-TR.step
robo-plater/elec/footprints/footprints.pretty/: CONN-SMD_B4B-PH-SM4-TB-LF-SN.kicad_mod  CONN-SMD_PH-2AWB.kicad_mod  CONN-TH_4P-P5.00_DB127V-5.0-4P-GN-S.kicad_mod  HTSSOP-24_L7.8-W4.4-P0.65-BL-EP.kicad_mod  IND-SMD_L11.5-W10.0_FXL1040.kicad_mod  IND-SMD_L7.0-W6.6.kicad_mod  QFN-28_L6.0-W6.0-P0.65-BL-EP3.7.kicad_mod  SMA_L4.4-W2.6-LS5.0-BI.kicad_mod  SOD-123_L2.8-W1.8-LS3.7-RD.kicad_mod  SOT-563_L1.6-W1.2-P0.50-LS1.6-BL.kicad_mod  TO-252-2_L6.6-W6.1-P4.57-LS9.9-BR-CW.kicad_mod  TO-277B-3_L5.4-W4.1-P1.85-LS6.5-TR.kicad_mod  WSON-8_L2.0-W2.0-P0.50-TL-EP.kicad_mod
robo-plater/elec/src/: io-expander.ato  motor-driver.ato  plating-supply-demo.ato  plating-supply.ato  robo-plater.ato
robo-plater/firmware/src/: main.cpp
test-board/: default.drl
(+13 files in other folders)
