[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ato-fab"
dynamic = ["version"]
description = 'fabrication tools for the atopile pcb fab'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Wildoer", email = "mattwildoer@Matts-MacBook-Air.local" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "svg.py>=1.5.0",
  "ruamel.yaml>=0.18.6",
  "rich>=13.9.2",
  "kicadcliwrapper>=1.0.2",
  "semver>=3.0.2",
]

[project.urls]
Documentation = "https://github.com/Matt Wildoer/ato-fab#readme"
Issues = "https://github.com/Matt Wildoer/ato-fab/issues"
Source = "https://github.com/Matt Wildoer/ato-fab"

[tool.hatch.version]
path = "src/ato_fab/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ato_fab tests}"

[tool.coverage.run]
source_pkgs = ["ato_fab", "tests"]
branch = true
parallel = true
omit = [
  "src/ato_fab/__about__.py",
]

[tool.coverage.paths]
ato_fab = ["src/ato_fab", "*/ato-fab/src/ato_fab"]
tests = ["tests", "*/ato-fab/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
